Test/typing/should_fail/method_call_no_method.java
class A {
    public void main(String[] args) {
        int result = myMethod(10);
    }
}
